==> nopnop2002/esp-idf-rc-switch/components/RCSwitch/RCSwitch.c <==
#include <stdio.h>
#include <inttypes.h>
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include "esp_system.h"
#include "esp_log.h"
#include "driver/gpio.h"
#include "esp_timer.h" // for esp-idf v5
#include "RCSwitch.h"

void enableTransmit(RCSWITCH_t * RCSwitch, int nTransmitterPin) {
	RCSwitch->nTransmitterPin = nTransmitterPin;
	//pinMode(this->nTransmitterPin, OUTPUT);
	//gpio_pad_select_gpio( RCSwitch->nTransmitterPin );
	gpio_reset_pin( RCSwitch->nTransmitterPin );
	gpio_set_direction( RCSwitch->nTransmitterPin, GPIO_MODE_OUTPUT );
}

esp_err_t enableReceive(RCSWITCH_t * RCSwitch, int interrupt) {
	RCSwitch->nReceiverInterrupt = interrupt;
	return (enableReceiveInternal(RCSwitch));
}

void disableReceive(RCSWITCH_t * RCSwitch) {
	//detachInterrupt(this->nReceiverInterrupt);
	//gpio_isr_handler_remove(GPIO_NUM_22);
	gpio_isr_handler_remove(RCSwitch->nReceiverInterrupt); // nReceiverInterrupt is GPIO
	RCSwitch->nReceiverInterrupt = -1;
}

bool receiveProtocol(RCSWITCH_t * RCSwitch, const int p, unsigned int changeCount) {
	const Protocol pro = proto[p-1];

	unsigned long code = 0;
	//Assuming the longer pulse length is the pulse captured in timings[0]
	const unsigned int syncLengthInPulses =  ((pro.syncFactor.low) > (pro.syncFactor.high)) ? (pro.syncFactor.low) : (pro.syncFactor.high);
	const unsigned int delay = RCSwitch->timings[0] / syncLengthInPulses;
	const unsigned int delayTolerance = delay * RCSwitch->nReceiveTolerance / 100;

	/* For protocols that start low, the sync period looks like
	 *							 _________
	 * _____________|					|XXXXXXXXXXXX|
	 *
	 * |--1st dur--|-2nd dur-|-Start data-|
	 *
	 * The 3rd saved duration starts the data.
	 *
	 * For protocols that start high, the sync period looks like
	 *
	 *	______________
	 * |							|____________|XXXXXXXXXXXXX|
	 *
	 * |-filtered out-|--1st dur--|--Start data--|
	 *
	 * The 2nd saved duration starts the data
	 */
	const unsigned int firstDataTiming = (pro.invertedSignal) ? (2) : (1);

	for (unsigned int i = firstDataTiming; i < changeCount - 1; i += 2) {
		code <<= 1;
		if (diff(RCSwitch->timings[i], delay * pro.zero.high) < delayTolerance &&
			diff(RCSwitch->timings[i + 1], delay * pro.zero.low) < delayTolerance) {
			// zero
		} else if (diff(RCSwitch->timings[i], delay * pro.one.high) < delayTolerance &&
					diff(RCSwitch->timings[i + 1], delay * pro.one.low) < delayTolerance) {
			// one
			code |= 1;
		} else {
			// Failed
			return false;
		}
	}

	if (changeCount > 7) { // ignore very short transmissions: no device sends them, so this must be noise
		RCSwitch->nReceivedValue = code;
		RCSwitch->nReceivedBitlength = (changeCount - 1) / 2;
		RCSwitch->nReceivedDelay = delay;
		RCSwitch->nReceivedProtocol = p;
		return true;
	}

	return false;
}

void handleInterrupt(void* arg)
{
	RCSWITCH_t *RCSwitch = (RCSWITCH_t *) arg;

	static unsigned int changeCount = 0;
	static unsigned long lastTime = 0;
	static unsigned int repeatCount = 0;

	const long time = esp_timer_get_time();
	const unsigned int duration = time - lastTime;

	if (duration > RCSwitch->nSeparationLimit) {
		// A long stretch without signal level change occurred. This could
		// be the gap between two transmission.
		if (diff(duration, RCSwitch->timings[0]) < 200) {
			// This long signal is close in length to the long signal which
			// started the previously recorded timings; this suggests that
			// it may indeed by a a gap between two transmissions (we assume
			// here that a sender will send the signal multiple times,
			// with roughly the same gap between them).
			repeatCount++;
			if (repeatCount == 2) {
				for(uint8_t i = 1; i <= numProto; i++) {
					if (receiveProtocol(RCSwitch, i, changeCount)) {
						// receive succeeded for protocol i
						break;
					}
				}
				repeatCount = 0;
			}
		}
		changeCount = 0;
	}
	// detect overflow
	if (changeCount >= RCSWITCH_MAX_CHANGES) {
		changeCount = 0;
		repeatCount = 0;
	}

	RCSwitch->timings[changeCount++] = duration;
	lastTime = time;
}
